added new updated to stefan version (main.css and all sections .ejs). Google maps are now removed and replaced with static image

--- a/themes/sukl-pristupy-theme/layout/_partial/after-footer.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/after-footer.ejs
@@ -15,7 +15,7 @@
                     }
                     document.getElementsByTagName("body")[0].appendChild(script);
                 })();
-            })(['https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js', './js/vendor/smooth-scroll.min.js', 'https://maps.googleapis.com/maps/api/js?key=AIzaSyCORkIc44cMpFoPIjZvOpI7w_OT3pa774o&v=3.exp&sensor=true', './js/main.js', 'https://www.youtube.com/iframe_api'], 0);
+            })(['https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js', './js/vendor/smooth-scroll.min.js', './js/main.js', 'https://www.youtube.com/iframe_api'], 0);
         }
     }, 100);
 </script>
