--- a/themes/sukl-pristupy-theme/layout/_partial/section-welcome.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/section-welcome.ejs
@@ -1,3 +1,3 @@
 <section id="<%- jsonName[count].tag %>" class="section-welcome background-config">
-    <div class="section-welcome__foreground background-config"></div>
+    <!-- <div class="section-welcome__foreground background-config"></div> -->
 </section>
