--- a/themes/sukl-pristupy-theme/layout/_partial/section-requests.ejs
+++ b/themes/sukl-pristupy-theme/layout/_partial/section-requests.ejs
@@ -8,18 +8,22 @@
         <p class="section__description white-color"><%- jsonName[count].description %></p>
         <div class="section-tabs">
             <% for (var i in jsonName[count].content){ %>
+            <% var disabled = "" %>
+            <% if(!jsonName[count].content[i].tableActivated) { %>
+            <% disabled = "section-tab--disable" %>
+            <% } %>
             <a href="<%- jsonName[count].content[i].url1 %>" target="<%- jsonName[count].content[i].target %>">
-            <div class="row-3 section-tab">
-                <div class="section-tab__table">
-                    <div class="section-tab__table-inner">
-                        <i class="fa <%- jsonName[count].content[i].logo %> fa-3x section-tab__icon"
-                           aria-hidden="true"></i>
-                        <div class="section-tab__title"><%- jsonName[count].content[i].title %></div>
-                        <div class="section-tab__spen"></div>
-                        <div class="section-tab__description"><%- jsonName[count].content[i].description %></div>
+                <div class="row-3 section-tab <%- disabled %>">
+                    <div class="section-tab__table">
+                        <div class="section-tab__table-inner">
+                            <i class="fa <%- jsonName[count].content[i].logo %> fa-3x section-tab__icon"
+                               aria-hidden="true"></i>
+                            <div class="section-tab__title"><%- jsonName[count].content[i].title %></div>
+                            <div class="section-tab__spen"></div>
+                            <div class="section-tab__description"><%- jsonName[count].content[i].description %></div>
+                        </div>
                     </div>
                 </div>
-            </div>
             </a>
             <% } %>
 
