zmena naming convention - /themes/sukl-api-theme/source/ a taky uprava prejmenovanych souboru v .ejs layoutech

--- a/themes/sukl-api-theme/layout/_partial/after-footer.ejs
+++ b/themes/sukl-api-theme/layout/_partial/after-footer.ejs
@@ -15,7 +15,7 @@
                     }
                     document.getElementsByTagName("body")[0].appendChild(script);
                 })();
-            })(['https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js', './js/vendor/smooth-scroll.min.js', './js/main.js'], 0);
+            })(['https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js', './js/vendor/smooth-scroll.min.js', './js/main_api.js'], 0);
         }
     }, 100);
 </script>
