--- a/themes/sukl-api-theme/layout/_partial/head.ejs
+++ b/themes/sukl-api-theme/layout/_partial/head.ejs
@@ -33,5 +33,5 @@ function css() {
     <!-- Font Awesome CSS -->
     <%- css('css/vendor/font-awesome.min.css') %>
     <!-- Main CSS -->
-    <%- css('css/main.css') %>
+    <%- css('css/main_api.css') %>
 </head>
